--- a/appspec.yml
+++ b/appspec.yml
@@ -1,8 +1,8 @@
 version: 0.0
 os: linux
 files:
-  - source: \
-    destination: \home\ec2-user\build_release
+  - source: /
+    destination: /home/ec2-user/build_release
 hooks:
  
   ApplicationStart:
